--- a/aaronrdzr/practica6/estilos.css
+++ b/aaronrdzr/practica6/estilos.css
@@ -33,6 +33,22 @@ h2{
     width: auto;
     clear: both;
 }
-section{
-    background-color: #37353E;
+
+.s1{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.cajas{
+    width: 300px;
+    height: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.cajas{
+    border: 5px solid hsl(227.37deg 12.26% 30.39%);
+    border-radius: 100px;
 }
