--- a/FernandaGomezG/practica6/estilos.css
+++ b/FernandaGomezG/practica6/estilos.css
@@ -13,12 +13,12 @@ header {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    }
+}
 
 section > div{
     flex-basis: 100px;
-    margin: 20px;
-    padding: 20px;
+    margin: 3px;
+    padding: 40px;
     text-align: center;
 }
 
@@ -28,4 +28,23 @@ div > img{
     background-color: rgb(37, 33, 33);
     width: 100px;
     max-width: 280px;
+}
+
+.excp img{
+    border-radius: 12px;
+    border: 5px solid black;
+    background-color: rgb(37, 33, 33);
+    width: 140px;
+    max-width: 280px;
+}
+
+div > p{
+    color: rgb(105, 64, 71);
+    font-size: 20px;
+}
+
+div > img:hover{
+    height: 100px;
+    width: auto;
+    box-shadow: 0 20px 30px rgb(157, 102, 111);
 }
