--- a/ErickLTI/p6/estilosp6.css
+++ b/ErickLTI/p6/estilosp6.css
@@ -1,6 +1,6 @@
 body {
     background-color: black;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
 }
 
