--- a/aaronrdzr/practica6/estilos.css
+++ b/aaronrdzr/practica6/estilos.css
@@ -41,7 +41,7 @@ h2{
 }
 .cajas{
     width: 300px;
-    height: 30px;
+    height: auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
