--- a/aaronrdzr/practica6/estilos.css
+++ b/aaronrdzr/practica6/estilos.css
@@ -1,5 +1,6 @@
 body{
     background-color:hsl(227.37deg 12.26% 30.39%) ;
+    
 }
 
 h1{
@@ -7,11 +8,8 @@ h1{
     margin: 0;
     padding: 8px;
     text-align: center;
-    font-size: 90px solid;
+    font-size: 90px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    
-    
-    
 }
 hr{
     background-color: #D3DAD9;
@@ -24,7 +22,7 @@ h2{
     margin: 0;
     padding: 8px;
     text-align: center;
-    font-size: 45px solid;
+    font-size: 45px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .hr2{
@@ -38,6 +36,9 @@ h2{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
 }
 .cajas{
     width: 300px;
@@ -46,9 +47,9 @@ h2{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+      
 }
 
-.cajas{
-    border: 5px solid hsl(227.37deg 12.26% 30.39%);
-    border-radius: 100px;
+.cajas img{
+    border-radius: 55px;
 }
