--- a/F-rn-ndo/estilos.css
+++ b/F-rn-ndo/estilos.css
@@ -33,6 +33,23 @@ section {
     box-shadow: 0px 0px 15px rgba(255,255,255,0.3);
 }
 
+section img{
+    width: 480px;
+    padding: 0%;
+    margin: 5px;
+    border-radius: 10px;
+    border: solid white 3px;
+    box-shadow: #a4a4a4;
+    transition: 
+    transform 0.3s ease,
+    background-color 0.3s ease,
+    border-color 0.3s ease;
+}
+
+section img:hover{
+    transform: scale(1.1);
+}
+
 /* css links */
 .links {
     list-style: none;
@@ -61,3 +78,4 @@ section {
     margin-top: 30px;
     font-size: 0.9em;
 }
+
