--- a/Hugo-0699/practica-6/estilos.css
+++ b/Hugo-0699/practica-6/estilos.css
@@ -1,34 +1,37 @@
-/* Estilos para la practica 6 */
-* {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 10px 15px;
-}
+/* Estilos para la Práctica 6 */
 .c-background {
-    background: radial-gradient(rgb(13, 39, 117), rgb(0, 0, 0)) ;
+    background: radial-gradient(rgb(20, 47, 65), rgb(0, 0, 0)) ;
+    margin: 25px 65px 25px;
 }
-.first-header {
-    background:#004d6b;
-    border-bottom: 7px solid #008bc2;
-    color:rgb(247, 228, 153);
-    font-size: 20px;
-    text-align: center;
-    padding: 5px;
-}
-.config-img {
-    gap: 2px;
-    display: flex;
-    align-items: center;
-}
-.config-img img {
-    height: 300px;
-    width: 200px; 
+.header-logo img {
+    background:#222121;
+    border-bottom: 6px solid rgb(22, 21, 21);
     border-radius: 20px;
+    padding: 0px 40px;
+}
+.config-content {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+.config-content img {
+    width: 200px; 
+    border-radius: 10px;
+    border-bottom: 9px solid rgb(22, 21, 21);
+    transition: transform 0.3s;
+}
+.config-content img:hover {
+    transform: scale(1.1);
 }
 .datos-personales {
-    background: rgb(27, 27, 31);
-    color:blanchedalmond;
-    border-bottom: 10px solid black;
-    font-size: 15px;
+    background: transparent;
     font-weight:bold;
-    padding: 5px 150px 5px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color:rgb(255, 243, 225);
+    font-size: 15px;
+    text-align: center;
+    padding: 40px;
 }
