--- a/BernaGaspar/estilos.css
+++ b/BernaGaspar/estilos.css
@@ -27,6 +27,20 @@ article {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+aside {
+    margin-bottom: 50px;
+    padding: 25px;
+    border-top: 5px dashed black;
+    border-bottom: 5px dashed black;
+    text-align: center;
+}
+
+aside a {
+    color: black;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-style: italic;
+}
+
 footer {
     padding: 25px 0 25px;
     background-color: black;
