--- a/oswtobias06/css/index.css
+++ b/oswtobias06/css/index.css
@@ -11,11 +11,22 @@ h1 {
     border: 5px solid white;
 }
 
+h2 {
+   background-color: #061335;
+    color: white;
+    padding: 1em;
+    width: 7em;
+}
+
 article {
     background-color: #061335;
     color: white;
     padding: 10px;
     border: 5px solid white;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1em;
+
 }
 
 section {
