--- a/Hugo-0699/ev2_practica-2/styles.css
+++ b/Hugo-0699/ev2_practica-2/styles.css
@@ -1,33 +1,43 @@
 /* Estilos para el documento*/
 * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
 }
 
 body {
-    background: rgb(24, 24, 24);
+    background: radial-gradient(rgb(24, 24, 24), rgb(0, 0, 0)) ;
     margin: 50px 0px;
 }
 main {
     background-color: rgb(255, 255, 255);
+    border-bottom: 10px solid rgb(110, 110, 110);
     border-radius: 20px;
-    padding: 10px 0px 30px;
-    margin-left: 170px;
-    margin-right: 170px;
+    margin-left: 250px;
+    margin-right: 250px;
     margin-bottom: 30px;
+    padding: 10px 0px 30px;
 }
 h1 {
     background: transparent;
     color: rgb(156, 4, 4);
-    text-align: center;
     font-size: 50px;
     padding: 10px;
     margin: 20px;
 }
-h2 {
-    text-align: center;
+#tabla {
+    padding: 10px;
+    margin: auto;
+}
+td {
+    background-color: rgb(219, 181, 75);
+    border: 5px solid rgb(141, 108, 0);
+    color: rgb(77, 3, 3);
+    font-size: 40px;
+    width: 10vw;
+    height: 10vh;
+    padding: 0px 30px;
 }
 footer {
-    text-align: center;
     color: aliceblue;
     font-weight: bold;
 }
